feat: return product list as api response
